13/07 indexing 1m20-30s need to be tested on big sites